# data_ingestion_service

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  requiremetns.txt  setup.py  upload.py
data_ingestion_service/: upload.py
data_ingestion_service.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_file.txt  test_upload.py
